[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/02_scenes/01_UI/06_InterractionIndicator/InterractionIndicator.gd" type="Script" id=1]
[ext_resource path="res://src/02_scenes/01_UI/02_Themes/CustomTheme.tres" type="Theme" id=2]
[ext_resource path="res://src/01_assets/01_UI/activation_frame.png" type="Texture" id=3]

[sub_resource type="CanvasItemMaterial" id=8]
blend_mode = 1
light_mode = 1

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 1

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 32, 2, 54, 12 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 20, 16, 66, 45 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 1, 17, 8, 5 )

[node name="InterractionIndicator" type="Node2D"]
material = SubResource( 8 )
scale = Vector2( 0.6, 0.6 )
script = ExtResource( 1 )

[node name="InterractionIndicatorParent" type="Control" parent="."]
material = SubResource( 2 )
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActivationTexture" type="TextureProgress" parent="InterractionIndicatorParent"]
margin_left = 12.0
margin_top = 13.0
margin_right = 28.0
margin_bottom = 29.0
texture_under = SubResource( 3 )
texture_progress = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonLabel" type="Label" parent="InterractionIndicatorParent"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -8.0
margin_top = -7.0
margin_right = 10.0
margin_bottom = 11.0
rect_scale = Vector2( 0.9, 0.9 )
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.207843, 0.2, 0.239216, 1 )
custom_colors/font_color_shadow = Color( 0.552941, 0.713726, 0.780392, 0.478431 )
text = "E"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemTitle" type="TextureRect" parent="."]
margin_left = 8.0
margin_top = -5.0
margin_right = 62.0
margin_bottom = 7.0
texture = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemLable" type="Label" parent="ItemTitle"]
margin_top = 1.0
margin_right = 89.0
margin_bottom = 19.0
rect_scale = Vector2( 0.6, 0.6 )
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.207843, 0.2, 0.239216, 1 )
custom_colors/font_color_shadow = Color( 0.552941, 0.713726, 0.780392, 0.478431 )
text = "Sleeping Bag"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemDescription" type="TextureRect" parent="."]
margin_left = -4.0
margin_top = 6.0
margin_right = 62.0
margin_bottom = 48.0
texture = SubResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WeaponComparsion" type="VBoxContainer" parent="ItemDescription"]
margin_left = 4.0
margin_top = 4.0
margin_right = 154.0
margin_bottom = 76.0
rect_scale = Vector2( 0.5, 0.5 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Attack" type="HBoxContainer" parent="ItemDescription/WeaponComparsion"]
margin_right = 150.0
margin_bottom = 15.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatLabel" type="Label" parent="ItemDescription/WeaponComparsion/Attack"]
margin_right = 32.0
margin_bottom = 15.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.207843, 0.2, 0.239216, 1 )
custom_colors/font_color_shadow = Color( 0.552941, 0.713726, 0.780392, 0.478431 )
text = "Atck."
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ValCurr" type="Label" parent="ItemDescription/WeaponComparsion/Attack"]
margin_left = 36.0
margin_right = 51.0
margin_bottom = 15.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.207843, 0.2, 0.239216, 1 )
custom_colors/font_color_shadow = Color( 0.552941, 0.713726, 0.780392, 0.478431 )
text = "42"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ValCurr2" type="TextureRect" parent="ItemDescription/WeaponComparsion/Attack"]
margin_left = 55.0
margin_right = 63.0
margin_bottom = 15.0
theme = ExtResource( 2 )
texture = SubResource( 7 )
stretch_mode = 4

[node name="ValNew" type="Label" parent="ItemDescription/WeaponComparsion/Attack"]
margin_left = 67.0
margin_right = 81.0
margin_bottom = 15.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.207843, 0.2, 0.239216, 1 )
custom_colors/font_color_shadow = Color( 0.552941, 0.713726, 0.780392, 0.478431 )
text = "58"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Speed" type="HBoxContainer" parent="ItemDescription/WeaponComparsion"]
margin_top = 19.0
margin_right = 150.0
margin_bottom = 34.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatLabel" type="Label" parent="ItemDescription/WeaponComparsion/Speed"]
margin_right = 26.0
margin_bottom = 15.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.207843, 0.2, 0.239216, 1 )
custom_colors/font_color_shadow = Color( 0.552941, 0.713726, 0.780392, 0.478431 )
text = "Spd."
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ValCurr" type="Label" parent="ItemDescription/WeaponComparsion/Speed"]
margin_left = 30.0
margin_right = 45.0
margin_bottom = 15.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.207843, 0.2, 0.239216, 1 )
custom_colors/font_color_shadow = Color( 0.552941, 0.713726, 0.780392, 0.478431 )
text = "42"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ValCurr2" type="TextureRect" parent="ItemDescription/WeaponComparsion/Speed"]
margin_left = 49.0
margin_right = 57.0
margin_bottom = 15.0
theme = ExtResource( 2 )
texture = SubResource( 7 )
stretch_mode = 4

[node name="ValNew" type="Label" parent="ItemDescription/WeaponComparsion/Speed"]
margin_left = 61.0
margin_right = 75.0
margin_bottom = 15.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.207843, 0.2, 0.239216, 1 )
custom_colors/font_color_shadow = Color( 0.552941, 0.713726, 0.780392, 0.478431 )
text = "58"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Crit" type="HBoxContainer" parent="ItemDescription/WeaponComparsion"]
margin_top = 38.0
margin_right = 150.0
margin_bottom = 53.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatLabel" type="Label" parent="ItemDescription/WeaponComparsion/Crit"]
margin_right = 29.0
margin_bottom = 15.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.207843, 0.2, 0.239216, 1 )
custom_colors/font_color_shadow = Color( 0.552941, 0.713726, 0.780392, 0.478431 )
text = "Crit."
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ValCurr" type="Label" parent="ItemDescription/WeaponComparsion/Crit"]
margin_left = 33.0
margin_right = 48.0
margin_bottom = 15.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.207843, 0.2, 0.239216, 1 )
custom_colors/font_color_shadow = Color( 0.552941, 0.713726, 0.780392, 0.478431 )
text = "42"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ValCurr2" type="TextureRect" parent="ItemDescription/WeaponComparsion/Crit"]
margin_left = 52.0
margin_right = 60.0
margin_bottom = 15.0
theme = ExtResource( 2 )
texture = SubResource( 7 )
stretch_mode = 4

[node name="ValNew" type="Label" parent="ItemDescription/WeaponComparsion/Crit"]
margin_left = 64.0
margin_right = 78.0
margin_bottom = 15.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.207843, 0.2, 0.239216, 1 )
custom_colors/font_color_shadow = Color( 0.552941, 0.713726, 0.780392, 0.478431 )
text = "58"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Effect" type="HBoxContainer" parent="ItemDescription/WeaponComparsion"]
margin_top = 57.0
margin_right = 150.0
margin_bottom = 72.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatLabel" type="Label" parent="ItemDescription/WeaponComparsion/Effect"]
margin_right = 19.0
margin_bottom = 15.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.207843, 0.2, 0.239216, 1 )
custom_colors/font_color_shadow = Color( 0.552941, 0.713726, 0.780392, 0.478431 )
text = "Eff."
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EffTitle" type="Label" parent="ItemDescription/WeaponComparsion/Effect"]
margin_left = 23.0
margin_right = 80.0
margin_bottom = 15.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.207843, 0.2, 0.239216, 1 )
custom_colors/font_color_shadow = Color( 0.552941, 0.713726, 0.780392, 0.478431 )
text = "Vampiric"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VisibilityTween" type="Tween" parent="."]

[node name="ActivationAnimationTween" type="Tween" parent="."]
[connection signal="tween_all_completed" from="ActivationAnimationTween" to="." method="_on_ActivationAnimationTween_tween_all_completed"]
